--- a/src/css/myPage.module.css
+++ b/src/css/myPage.module.css
@@ -1,5 +1,5 @@
 .myPageContainer {
-  width: 1550px;
+  width: 1500px;
   margin-top: 40px;
 }
 
@@ -20,9 +20,41 @@
 }
 .leftDiv {
   width: 73%;
-  height: 250px;
+  height: 400px;
   background-color: #f5f6f8;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
+.leftInner {
+  width: 85%;
+  height: 300px;
+  background-color: red;
+  position: relative;
+}
+
+.editContent {
+  width: 100px;
+  height: 40px;
+  padding: 0 15px 0 15px;
+  background-color: #d9d9d9;
+  border-radius: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  right: 0;
+}
+
+.editContetnBox {
+  width: 25px;
+  height: 25px;
+  background-color: #808080;
+}
+.profileImg {
+}
+
 .rightDiv {
   width: 25%;
   background-color: #f5f6f8;
