--- a/src/css/myPage.module.css
+++ b/src/css/myPage.module.css
@@ -23,15 +23,16 @@
   height: 400px;
   background-color: #f5f6f8;
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 .leftInner {
-  width: 85%;
+  width: 88%;
   height: 300px;
   background-color: red;
   position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .editContent {
@@ -45,6 +46,7 @@
   align-items: center;
   position: absolute;
   right: 0;
+  top: 0;
 }
 
 .editContetnBox {
@@ -52,7 +54,18 @@
   height: 25px;
   background-color: #808080;
 }
+.imgAndContentDiv {
+  background-color: green;
+  height: 90%;
+  width: 70%;
+  margin-left: 20px;
+  display: flex;
+  flex-direction: row;
+}
 .profileImg {
+  height: 100%;
+  width: 200px;
+  background-color: #d9d9d9;
 }
 
 .rightDiv {
