--- a/src/css/myPage.module.css
+++ b/src/css/myPage.module.css
@@ -19,7 +19,7 @@
   justify-content: space-between;
 }
 .leftDiv {
-  width: 73%;
+  width: 70%;
   height: 400px;
   background-color: #f5f6f8;
   display: flex;
@@ -29,7 +29,7 @@
 .leftInner {
   width: 88%;
   height: 300px;
-  background-color: red;
+  /* background-color: red;  */
   position: relative;
   display: flex;
   align-items: center;
@@ -55,7 +55,7 @@
   background-color: #808080;
 }
 .imgAndContentDiv {
-  background-color: green;
+  /* background-color: green; */
   height: 90%;
   width: 70%;
   margin-left: 20px;
@@ -64,11 +64,39 @@
 }
 .profileImg {
   height: 100%;
-  width: 200px;
+  width: 300px;
   background-color: #d9d9d9;
 }
 
+.profileContent {
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+}
+.nameDiv {
+  flex: 1;
+  margin-bottom: 10px;
+}
+.name {
+  font-size: 25px;
+  font-weight: 600;
+  margin-right: 20px;
+}
+.profileInformation {
+  flex: 7;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.profileInformation label {
+  display: inline-block;
+  width: 100px;
+}
+
 .rightDiv {
-  width: 25%;
+  width: 28%;
   background-color: #f5f6f8;
 }
