--- a/src/css/GlobalLayout.module.css
+++ b/src/css/GlobalLayout.module.css
@@ -24,6 +24,13 @@
   aspect-ratio: 159/50;
   padding-top: 30px;
 }
+/* 아이콘 */
+.icon {
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
+  aspect-ratio: 1/1;
+}
 
 /* 마이페이지 영역 */
 .MYPAGE {
@@ -32,7 +39,7 @@
   padding-top: 50px;
 }
 
-/* 마이페이지 버튼 */
+/* 메인메뉴 버튼 */
 .Btn {
   width: 24px;
   height: 24px;
@@ -42,7 +49,7 @@
   cursor: pointer;
 }
 
-/* 마이페이지 텍스트 폰트 */
+/* 메인메뉴 텍스트 폰트 */
 .Font {
   display: flex;
   width: 90px;
@@ -59,11 +66,66 @@
   padding-left: 26px;
 }
 
+/* JOBMATCH  영역 */
+.JOBMATCH {
+  composes: boxSmall from common;
+  display: flex;
+  padding-top: 40px;
+}
+/* KANMATCH 영역 */
+.KANMATCH {
+  composes: boxSmall from common;
+  display: flex;
+  padding-top: 40px;
+}
+
+/* 좌측 사이드 바 구분선 구현 */
 .Line {
   width: 200px;
-
   height: 0;
   flex-shrink: 0;
+  margin-top: 10px;
+}
+
+/*서브메뉴 */
+.subMenu {
+  margin-top: 20px;
+  margin-left: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 14px; /*  항목 간 간격 지정 */
+}
+
+.subItem {
+  display: flex;
+  align-items: center;
+  height: 20px;
+}
+
+.subBtn {
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
+  background: #d9d9d9;
+  border: none;
+  margin-right: 8px;
+  cursor: pointer;
+}
+
+.subFont {
+  display: flex;
+  width: 100px;
+  height: 24px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+
+  color: #808080;
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 /* 우측 콘텐츠 */
