--- a/src/css/components/progressingWork.module.css
+++ b/src/css/components/progressingWork.module.css
@@ -16,9 +16,10 @@
 }
 
 .topDiv {
-  padding: 20px 60px;
+  padding: 10px 70px;
   flex: 1;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   /* background-color: blue; */
 }
