--- a/src/css/components/progressingWork.module.css
+++ b/src/css/components/progressingWork.module.css
@@ -11,13 +11,20 @@
   width: 100%;
   height: 200px;
   background-color: #eef3fc;
+}
+.inner {
+  /* width: 100%; */
+  margin-left: 70px;
+  margin-right: 70px;
   display: flex;
   flex-direction: column;
+  height: 100%;
+  /* background-color: red; */
 }
-
 .topDiv {
-  padding: 10px 70px;
+  /* padding: 10px 70px; */
   flex: 1;
+  /* padding-top: 5px; */
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -26,7 +33,7 @@
 .checkAndTitleDiv {
   display: flex;
   flex-direction: row;
-  height: 40px;
+  /* height: 40px; */
   align-items: center;
 }
 .checkDiv {
@@ -56,5 +63,11 @@
 }
 .contentDiv {
   flex: 2;
+  width: 100%;
+  margin-bottom: 20px;
   /* background-color: red; */
+}
+.progressingBarDiv {
+  height: 100%;
+  background-color: #ffffff;
 }
