--- a/src/css/components/profile.module.css
+++ b/src/css/components/profile.module.css
@@ -19,7 +19,7 @@
   height: 400px;
   background-color: #f5f6f8;
   display: flex;
-  /* justify-content: center; */
+  justify-content: center;
   align-items: center;
 }
 .leftInner {
@@ -29,7 +29,7 @@
   position: relative;
   display: flex;
   align-items: center;
-  margin-left: 70px;
+  /* margin-left: 70px; */
 }
 
 .editContent {
@@ -49,7 +49,7 @@
 .imgAndContentDiv {
   /* background-color: green; */
   height: 90%;
-  width: 70%;
+  width: 100%;
   /* margin-left: 20px; */
   display: flex;
   flex-direction: row;
@@ -141,7 +141,7 @@
 }
 .alarmText {
   width: 80%;
-  font-size: 20px;
+  font-size: 18px;
   margin-left: 10px;
   /* line-height: 1.2; */
 }
