--- a/src/css/GlobalLayout.module.css
+++ b/src/css/GlobalLayout.module.css
@@ -29,7 +29,7 @@ li {
 /* 좌측 사이드바 */
 .sidebar {
   /* 핵심 변경: fixed 제거 -> 문서 흐름에 포함 */
-  /* position: fixed; */
+  position: fixed;
   width: 240px;
   height: 100vh;
   flex-shrink: 0; /* 너비가 줄어들지 않도록 고정 */
@@ -151,13 +151,14 @@ li {
   /* width: 1198px; */
   /* 핵심 변경: margin-left 제거 */
   /* margin-left: 240px; */
-  padding: 70px 0;
+  padding: 70px 0 70px 240px; /*sidebar 너비가 240px이라 fixed 주고 그만큼 padding 값 더함*/
 
   /* 자식 요소들을 가로축 중앙에 정렬 */
   align-items: center;
 
   gap: 52px;
   background: #fff;
+  overflow-y: auto;
 }
 
 /* 아이콘 위치 정렬 */
