--- a/src/css/components/progressingWork.module.css
+++ b/src/css/components/progressingWork.module.css
@@ -2,6 +2,9 @@
   margin-top: 80px;
   width: 100%;
 }
+.headerDiv {
+  margin-bottom: 15px;
+}
 
 .headerDiv span {
   font-size: 25px;
@@ -9,7 +12,7 @@
 
 .body {
   width: 100%;
-  height: 400px;
+  height: 200px;
   background-color: #eef3fc;
 }
 .inner {
@@ -41,7 +44,7 @@
   flex-direction: row;
   background-color: #5290ff;
   border-radius: 100px;
-  width: 70px;
+  width: 80px;
   height: 28px;
   align-items: center;
   padding: 0 7px;
