--- a/src/css/components/progressingIlKan.module.css
+++ b/src/css/components/progressingIlKan.module.css
@@ -16,11 +16,72 @@
   background-color: #eef3fc;
 }
 .inner {
-  /* width: 100%; */
   margin-left: 70px;
   margin-right: 70px;
   display: flex;
   flex-direction: column;
   height: 100%;
   /* background-color: red; */
+}
+.topDiv {
+  flex: 1.5;
+  display: flex;
+  flex-direction: row;
+  /* background-color: blue; */
+}
+.leftDiv {
+  background-color: red;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.img {
+  height: 90%;
+  width: 230px;
+  background-color: #d9d9d9;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+  /* line-height: 160px; */
+  font-size: 30px;
+}
+
+.rightDiv {
+  background-color: blue;
+}
+
+.titleDiv span {
+  font-size: 25px;
+  font-weight: 600;
+  color: white;
+  display: inline-block;
+}
+.environmentDiv {
+  display: flex;
+  flex-direction: row;
+}
+
+.environmentTag {
+  background-color: #5290ff;
+  border-radius: 100px;
+  /* width: 80px; */
+  height: 28px;
+  align-items: center;
+  padding: 0 10px;
+  justify-content: space-between;
+  margin-right: 10px;
+  display: flex;
+}
+.environmentTag span {
+  color: white;
+  font-weight: lighter;
+}
+.contentDiv {
+  flex: 1;
+  /* background-color: red; */
+}
+.progressingBarDiv {
+  height: 100px;
+  background-color: #ffffff;
 }
