--- a/src/css/components/progressingIlKan.module.css
+++ b/src/css/components/progressingIlKan.module.css
@@ -8,6 +8,7 @@
 
 .headerDiv span {
   font-size: 25px;
+  color: black;
 }
 
 .body {
@@ -30,14 +31,20 @@
   /* background-color: blue; */
 }
 .leftDiv {
-  background-color: red;
+  /* background-color: red; */
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-
+.textDiv {
+  height: 85%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 28px;
+}
 .img {
-  height: 90%;
+  height: 85%;
   width: 230px;
   background-color: #d9d9d9;
   font-weight: bold;
@@ -54,29 +61,54 @@
 .titleDiv span {
   font-size: 25px;
   font-weight: 600;
-  color: white;
+  /* color: white; */
   display: inline-block;
 }
-.environmentDiv {
+.mainDiv {
   display: flex;
   flex-direction: row;
+  margin-bottom: 8px;
 }
 
-.environmentTag {
+.mainTag {
   background-color: #5290ff;
   border-radius: 100px;
   /* width: 80px; */
   height: 28px;
   align-items: center;
   padding: 0 10px;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   margin-right: 10px;
   display: flex;
 }
-.environmentTag span {
+.mainTag span {
   color: white;
   font-weight: lighter;
 }
+.basicDiv {
+  display: flex;
+  flex-direction: row;
+}
+.basicTag {
+  background-color: #a7a7a7;
+  border-radius: 100px;
+  /* width: 80px; */
+  height: 28px;
+  align-items: center;
+  padding: 0 10px;
+  /* justify-content: space-between; */
+  margin-right: 10px;
+  display: flex;
+}
+.basicTag span {
+  color: white;
+  font-weight: lighter;
+}
+.addressDiv > span {
+  color: #808080;
+  font-weight: lighter;
+}
+
 .contentDiv {
   flex: 1;
   /* background-color: red; */
