--- a/src/css/components/progressingIlKan.module.css
+++ b/src/css/components/progressingIlKan.module.css
@@ -50,13 +50,14 @@
   height: 85%;
   width: 230px;
   background-color: #d9d9d9;
-  font-weight: bold;
-  color: white;
   text-align: center;
   /* line-height: 160px; */
-  font-size: 30px;
 }
-
+.img > span {
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+}
 .rightDiv {
   display: flex;
   align-items: center;
