--- a/src/css/components/progressingIlKan.module.css
+++ b/src/css/components/progressingIlKan.module.css
@@ -40,17 +40,18 @@
   align-items: center;
 }
 .textDiv {
-  height: 85%;
+  height: 83%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   margin-left: 28px;
 }
 .img {
-  height: 85%;
+  height: 75%;
   width: 230px;
   background-color: #d9d9d9;
   text-align: center;
+  padding: 10px;
   /* line-height: 160px; */
 }
 .img > span {
@@ -58,6 +59,7 @@
   font-size: 30px;
   color: white;
 }
+
 .rightDiv {
   display: flex;
   align-items: center;
