--- a/src/css/components/StateIcon.module.css
+++ b/src/css/components/StateIcon.module.css
@@ -1,7 +1,7 @@
 .checkDiv {
   display: flex;
   flex-direction: row;
-  background-color: #5290ff;
+  /* background-color: #5290ff; */
   border-radius: 100px;
   width: 60px;
   height: 28px;
