refact: 불필요한 상태관리 없애고 삼항연산으로 대체

--- a/src/css/components/progressingIlKan.module.css
+++ b/src/css/components/progressingIlKan.module.css
@@ -102,6 +102,7 @@
 .mainTag span {
   color: white;
   font-weight: lighter;
+  font-size: 12px;
 }
 .basicDiv {
   display: flex;
@@ -121,6 +122,7 @@
 .basicTag span {
   color: white;
   font-weight: lighter;
+  font-size: 12px;
 }
 .addressDiv > span {
   color: #808080;
