--- a/src/css/style.module.css
+++ b/src/css/style.module.css
@@ -3,3 +3,9 @@
   height: 25px;
   background-color: #808080;
 }
+.boxSmall {
+  width: 159px;
+  height: 24px;
+  flex-shrink: 0;
+  aspect-ratio: 159 / 50;
+}
