--- a/src/css/components/jobs/jobsNavigation.module.css
+++ b/src/css/components/jobs/jobsNavigation.module.css
@@ -1,7 +1,14 @@
 .tabs {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  border-bottom: 1px solid #d9d9d9;
+}
+
+.tabWrapper {
   display: flex;
   gap: 82px;
-  border-bottom: 1px solid #d9d9d9;
+  width: 89%;
 }
 
 .tab {
