--- a/src/css/components/jobs/jobsList.module.css
+++ b/src/css/components/jobs/jobsList.module.css
@@ -1,6 +1,9 @@
 .grid {
-  margin-top: 32px;
+  margin-top: 30px;
   display: grid;
   gap: 24px;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+
+  grid-template-columns: repeat(auto-fit, minmax(336px, 336px));
+
+  grid-auto-rows: 381px;
 }
