--- a/src/css/components/jobs/jobsList.module.css
+++ b/src/css/components/jobs/jobsList.module.css
@@ -3,7 +3,7 @@
   display: grid;
   gap: 24px;
 
-  grid-template-columns: repeat(auto-fit, minmax(335px, 335px));
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 
   grid-auto-rows: 381px;
 }
