--- a/src/css/components/kanMatch/kanMatchNavigation.module.css
+++ b/src/css/components/kanMatch/kanMatchNavigation.module.css
@@ -12,6 +12,8 @@
 }
 
 .tab {
+  display: flex;
+  justify-content: center;
   width: 111px;
   height: 43px;
   background: transparent;
@@ -20,9 +22,11 @@
   color: #a7a7a7;
   border-bottom: 2px solid #d9d9d9;
   cursor: pointer;
+  white-space: nowrap;
 }
 
 .active {
   color: #000;
   border-bottom: 2px solid #5290ff;
+  font-weight: bold;
 }
