--- a/src/css/components/kanMatch/kanMathFilter.module.css
+++ b/src/css/components/kanMatch/kanMathFilter.module.css
@@ -1,5 +1,6 @@
 .wrapper {
   width: 100%;
+  margin-bottom: 40px;
 }
 
 .trigger {
@@ -7,6 +8,7 @@
   width: 179px;
   height: 60px;
   align-items: center;
+  justify-content: center;
   gap: 23px;
   border: 1px solid #000;
   border-radius: 100px;
@@ -14,6 +16,7 @@
   cursor: pointer;
   font-size: 24px;
   color: #000;
+  line-height: 1;
 }
 .locIcon {
   color: #5290ff;
@@ -30,6 +33,8 @@
   background: #fff;
   border: 1px solid #000;
   border-radius: 10px;
+
+  overflow: hidden;
 
   max-height: 0;
   opacity: 0;
@@ -78,6 +83,7 @@
   padding-right: 16px;
   cursor: pointer;
   font-size: 16px;
+  line-height: 1;
 }
 .selected {
   font-weight: bold;
