--- a/src/css/pages/jobsDetailPage.module.css
+++ b/src/css/pages/jobsDetailPage.module.css
@@ -4,46 +4,7 @@
   align-items: center;
   gap: 36px;
   width: 89%;
-}
-
-.header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 1056px;
-  height: 500px;
-  flex-shrink: 0;
-  background: #f5f6f8;
-  padding-top: 34px;
-  padding-bottom: 40px;
-  box-sizing: border-box;
-}
-
-.footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 1056px;
-  height: 600px;
-  flex-shrink: 0;
-  background: #f5f6f8;
-  box-sizing: border-box;
-  padding-top: 41px;
-  gap: 35px;
-}
-.footerSubtitle {
-  display: flex;
-  width: 874px;
-  height: 29px;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;
-  color: #000;
-  font-family: "Noto Sans KR";
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 70px;
+  padding: 0 90px; /* x축 패딩 90px */
 }
 
 .applyBtn {
@@ -54,16 +15,65 @@
   border-radius: 60px;
   border: none;
   background: #5290ff;
-
   text-decoration: none;
   color: white;
   text-align: center;
-  line-height: 120px; /* 세로 중앙 정렬 */
+  line-height: 120px;
   font-size: 24px;
   font-weight: bold;
 }
 
-.headerTitle {
+/* === 구인 공고 스타일 === */
+.jobPosting {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 1056px;
+  height: 500px;
+  flex-shrink: 0;
+  background: #f5f6f8;
+  padding-top: 34px;
+  padding-bottom: 40px;
+  box-sizing: border-box;
+  border-radius: 10px;
+}
+.jobPostingDueDate {
+  display: flex;
+  width: 875px;
+  gap: 9px;
+  margin-top: 17px;
+}
+.jobPostingDueDateLabel {
+  display: flex;
+  width: 81px;
+  height: 25px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: #000;
+
+  font-family: "Noto Sans KR";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 40px; /* 250% */
+}
+.jobPostingDueDateValue {
+  display: flex;
+  width: 157px;
+  height: 25px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: #000;
+  font-family: "Noto Sans KR";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 40px; /* 250% */
+}
+
+.jobPostingTitle {
   display: flex;
   width: 875px;
   height: 128px;
@@ -77,7 +87,7 @@
   line-height: 70px;
 }
 
-.headerSubtitle {
+.jobPostingSubtitle {
   display: flex;
   width: 875px;
   height: 29px;
@@ -92,6 +102,16 @@
   text-align: left;
 }
 
+.line {
+  width: 1000px;
+  height: 1px;
+  flex-shrink: 0;
+  stroke-width: 1px;
+  stroke: #d9d9d9;
+  margin-bottom: 28px;
+}
+
+/* === 본문 정보 그리드 스타일 === */
 .infoGrid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -108,14 +128,6 @@
   gap: 24px;
 }
 
-.infoIcon {
-  width: 68px;
-  height: 68px;
-  flex-shrink: 0;
-  background: #d9d9d9;
-  margin-left: 20px;
-}
-
 .infoContent {
   display: flex;
   flex-direction: column;
@@ -123,12 +135,8 @@
 }
 
 .infoLabel {
-  display: flex;
   width: 103px;
   height: 24px;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;
   color: #000;
   font-family: "Noto Sans KR";
   font-size: 20px;
@@ -137,12 +145,8 @@
 }
 
 .infoDate {
-  display: flex;
   width: 157px;
   height: 33px;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;
   color: #000;
   font-family: "Noto Sans KR";
   font-size: 32px;
@@ -151,12 +155,8 @@
 }
 
 .infoSalary {
-  display: flex;
   width: 222px;
   height: 33px;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;
   color: #5290ff;
   font-family: "Noto Sans KR";
   font-size: 32px;
@@ -165,12 +165,8 @@
 }
 
 .infoPhone {
-  display: flex;
   width: 281px;
   height: 33px;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;
   color: #000;
   font-family: "Noto Sans KR";
   font-size: 24px;
@@ -179,12 +175,8 @@
 }
 
 .infoEmail {
-  display: flex;
   width: 304px;
   height: 33px;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;
   color: #000;
   font-family: "Noto Sans KR";
   font-size: 24px;
@@ -192,43 +184,121 @@
   line-height: 40px;
 }
 
-.line {
-  width: 1000px;
-  height: 1px;
-  flex-shrink: 0;
-  stroke-width: 1px;
-  stroke: #d9d9d9;
-  padding-top: 25px;
-  padding-bottom: 28px;
+.infoIcon {
+  width: 40.094px;
+  height: 40.094px;
+  margin-left: 20px;
 }
 
-.footerImages img {
-  width: 427px;
-  height: 320px;
-  flex-shrink: 0;
-}
-
-.thumbcontainer {
+/* === 모집 조건 스타일 === */
+.jobRequirement {
   display: flex;
-  flex-direction: row;
-  gap: 24px;
+  flex-direction: column;
+  align-items: center;
+  width: 1056px;
+  height: 231px;
+  border-radius: 10px;
+  background: #f5f6f8;
+  padding-top: 30px;
 }
 
-.thumb {
-  width: 427px;
-  height: 320px;
-  flex-shrink: 0;
-  background: #d9d9d9;
-}
-
-.footerText {
+.jobRequirementSubtitle {
   width: 875px;
-  height: 71px;
+  height: 29px;
+  color: #000;
+  font-family: "Noto Sans KR";
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 70px;
+  padding-bottom: 50px;
+}
+
+.jobRequirementInfoGrid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px 140px;
+}
+
+.jobRequirementInfoBox {
+  display: flex;
+  width: 359px;
+  height: 32px;
+}
+
+.jobRequirementInfoLabel {
+  width: 86px;
+  height: 32px;
+  color: #808080;
+  font-family: "Noto Sans KR";
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 36px;
+  padding-right: 20px;
+}
+
+.jobRequirementInfoContent {
+  width: 245px;
+  height: 36px;
+  color: #000;
+  font-family: "Noto Sans KR";
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 36px;
+}
+
+.jobDetails {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 1061px;
+  height: 900px;
+  flex-shrink: 0;
+  background: #f0f5ff;
+}
+
+.jobDetailsSubtitle {
+  display: flex;
+  width: 875px;
+  height: 29px;
+  flex-direction: column;
+  justify-content: center;
   flex-shrink: 0;
   color: #000;
   font-family: "Noto Sans KR";
-  font-size: 24px;
+  font-size: 32px;
   font-style: normal;
+  font-weight: 500;
+  line-height: 70px; /* 218.75% */
+  margin-top: 50px;
+  margin-bottom: 32px;
+}
+
+.jobDetailsContent {
+  width: 875px;
+  color: #000;
+  font-family: "Noto Sans KR";
+  font-size: 24px;
   font-weight: 400;
-  line-height: 36px; /* 150% */
+  line-height: 36px;
+  /* 스크린샷의 91과 95px에 맞게 패딩 추가 */
+
+  box-sizing: border-box; /* 패딩이 width에 포함되도록 설정 */
+
+  /* 상세 내용 텍스트 스타일 */
+  h4 {
+    font-size: 24px;
+    font-weight: bold;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+  ul {
+    padding-left: 20px;
+    margin-top: 10px;
+  }
+  li {
+  }
+  p {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
 }
