--- a/src/css/components/jobs/jobsList.module.css
+++ b/src/css/components/jobs/jobsList.module.css
@@ -1,39 +1,28 @@
 /* jobsList.module.css */
-.list {
+.listContainer {
+  width: 100%;
   margin-top: 30px;
 }
 
 .head {
+  width: 100%;
   display: grid;
-  grid-template-columns: 1fr 160px 120px;
+  grid-template-columns: 1fr 148px 148px;
   align-items: center;
-  padding: 14px 20px;
-  font-weight: 600;
-  color: #333;
+  text-align: center;
+  height: 80px;
+  font-size: 24px;
+  font-weight: 500;
+  color: #000;
+  border-top: 1px solid #000;
   border-bottom: 1px solid #e6e8ec;
 }
 
 .headColLeft {
 }
 .headColCenter {
-  text-align: right;
+  padding-left: 28px;
 }
 .headColRight {
-  text-align: right;
-}
-
-.rows {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: grid;
-  gap: 10px; /* 행 간격 */
-}
-
-/* 반응형: 태블릿 이하에서 가격/기한이 아래로 내려가도록 */
-@media (max-width: 768px) {
-  .head {
-    grid-template-columns: 1fr 120px 90px;
-    font-size: 14px;
-  }
+  padding-right: 39px;
 }
