--- a/src/css/components/jobs/JobsRow.module.css
+++ b/src/css/components/jobs/JobsRow.module.css
@@ -1,19 +1,22 @@
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .row {
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 169px 121px;
   align-items: center;
-  height: 80px;
+  height: 120px;
   font-size: 24px;
   font-weight: 500;
   border-bottom: 1px solid #e6e8ec;
 }
 
-/* .row:hover {
-  background: #f9fbff;
-  border-color: #e6edff;
-  box-shadow: 0 2px 10px rgba(28, 70, 255, 0.06);
-} */
+.row:hover {
+  background: #f5f6f8;
+}
 
 .left {
   padding-left: 23px;
