--- a/src/css/GlobalLayout.module.css
+++ b/src/css/GlobalLayout.module.css
@@ -1,12 +1,9 @@
-/* @value common: "./style.module.css"; */
-
-/* 전체 레이아웃 - flex 컨테이너로 설정 */
+/* 전체 레이아웃 - flex 컨테이너 */
 .wrapper {
   display: flex;
-  position: relative;
-  width: 100%;
 }
 
+/* 일반적인 요소 초기화 스타일 */
 ul {
   padding-left: 0;
   margin: 0;
@@ -26,159 +23,53 @@ li {
   width: auto;
 }
 
-/* 좌측 사이드바 */
-.sidebar {
-  /* 핵심 변경: fixed 제거 -> 문서 흐름에 포함 */
+a {
+  text-decoration: none;
+}
+
+/* 로고와 아이콘을 감싸는 컨테이너 */
+.icon {
+  /* 화면에 고정시키고 우측 상단에 배치 */
   position: fixed;
-  width: 240px;
-  height: 100vh;
-  flex-shrink: 0; /* 너비가 줄어들지 않도록 고정 */
-  background: #f5f6f8;
-  flex-direction: column;
-  display: flex;
-  align-items: center;
+  top: 33px;
+  right: 83px;
+  z-index: 1000; /* 다른 요소 위에 나타나도록 설정 */
 }
 
-/* 로고 */
+/* 로고들을 담는 flex 컨테이너 */
+.logoBox {
+  display: flex;
+  gap: 30px;
+}
+
+/* 개별 로고 이미지 */
 .logo {
-  width: 159px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   flex-shrink: 0;
-  aspect-ratio: 159/50;
-  padding-top: 30px;
 }
 
-/* 마이페이지 영역 */
-.MYPAGE {
-  /* composes: boxSmall from common; */
-  display: flex;
-  padding-top: 50px;
-}
-
-/* 메인메뉴 버튼 */
-.Btn {
-  width: 24px;
-  height: 24px;
-  flex-shrink: 0;
-  background: #d9d9d9;
-  border: none;
-  cursor: pointer;
-}
-
-/* 메인메뉴 텍스트 폰트 */
-.Font {
-  display: flex;
-  width: 90px;
-  height: 24px;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;
-  color: #808080;
-  font-family: "Noto Sans KR";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  padding-left: 26px;
-}
-
-/* JOBMATCH 영역 */
-.JOBMATCH {
-  /* composes: boxSmall from common; */
-  display: flex;
-  padding-top: 40px;
-}
-/* KANMATCH 영역 */
-.KANMATCH {
-  /* composes: boxSmall from common; */
-  display: flex;
-  padding-top: 40px;
-}
-
-/* 좌측 사이드 바 구분선 구현 */
-.Line {
-  width: 200px;
-  height: 0;
-  flex-shrink: 0;
-  margin-top: 10px;
-}
-
-/* 서브메뉴 */
-.subMenu {
-  margin-top: 20px;
-  margin-left: 40px;
-  display: flex;
-  flex-direction: column;
-  gap: 14px;
-}
-
-.subItem {
-  display: flex;
-  align-items: center;
-  height: 20px;
-}
-
-.subBtn {
-  width: 20px;
-  height: 20px;
-  flex-shrink: 0;
-  background: #d9d9d9;
-  border: none;
-  margin-right: 8px;
-  cursor: pointer;
-}
-
-.subFont {
-  display: flex;
-  width: 100px;
-  height: 24px;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;
-  color: #808080;
-  font-family: "Noto Sans KR", sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
+/* 메인 콘텐츠 영역 */
 .content {
+  margin-top: 100px;
   display: flex;
-  flex-direction: column; /* 자식 요소들을 세로로 쌓음 */
-  flex-grow: 1; /* 남은 공간을 모두 채움 */
-  /* 핵심 변경: 고정 너비 제거 -> 유동적으로 변경 */
-  /* width: 1198px; */
-  /* 핵심 변경: margin-left 제거 */
-  /* margin-left: 240px; */
-  padding-left: 240px; /*sidebar 너비가 240px이라 fixed 주고 그만큼 padding 값 더함*/
-
-  /* 자식 요소들을 가로축 중앙에 정렬 */
+  flex-direction: column;
+  flex-grow: 1;
+  margin-left: 240px; /* 사이드바 공간 확보 */
   align-items: center;
-
   gap: 52px;
   background: #fff;
   overflow-y: auto;
 }
 
-/* 아이콘 위치 정렬 */
-.iconGroup {
-  position: absolute; /* content를 기준으로 위치 지정 */
-  top: 50%;
-  transform: translate(0, -50%);
-  right: 0;
+/* 좌측 사이드바 */
+.sidebar {
+  position: fixed;
+  width: 240px;
+  height: 100vh;
+  flex-shrink: 0;
+  background: #f5f6f8;
   display: flex;
-  gap: 52px;
-  z-index: 1000;
-}
-
-/* 링크의 기본 밑줄을 제거합니다. */
-a {
-  text-decoration: none;
-}
-header {
-  width: 89%;
-  height: 100px;
-  /* background-color: red; */
-  position: relative;
+  flex-direction: column;
+  align-items: center;
 }
