--- a/src/css/components/profile.module.css
+++ b/src/css/components/profile.module.css
@@ -61,11 +61,12 @@
   padding-right: 30px;
   display: flex;
   justify-content: flex-end;
+  align-items: center;
 }
 .editIconDiv {
   width: 100px;
   height: 20px;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   border-radius: 100px;
   border: 1px solid #a7a7a7;
   display: flex;
