--- a/src/css/components/myPage/profile.module.css
+++ b/src/css/components/myPage/profile.module.css
@@ -24,7 +24,8 @@
   align-items: center; */
   border-radius: 16px;
 }
-.leftHeader {
+.leftHeader,
+.rightHeader {
   display: flex;
   align-items: center;
   height: 60px;
@@ -32,24 +33,17 @@
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
 }
-.leftHeader img {
+.leftHeader img,
+.rightHeader img {
   margin-left: 10px;
 }
-.leftHeader span {
+.leftHeader span,
+.rightHeader span {
   font-size: 25px;
   color: #092f63;
   font-weight: 400;
   margin-left: 15px;
 }
-
-/* .leftInner {
-  width: 88%;
-  height: 300px;
-  background-color: red;
-  position: relative;
-  display: flex;
-  align-items: center;
-} */
 
 .leftContent {
   flex: 1;
@@ -161,52 +155,17 @@
   width: 28%;
   height: 400px;
   background-color: #f5f6f8;
-
+  border-radius: 16px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  /* justify-content: center; */
+  /* align-items: center; */
 }
-.rightInner {
-  width: 85%;
-  height: 300px;
+.rightContent {
   /* background-color: red; */
-  display: flex;
-  position: relative;
-  align-items: center;
-}
-.alarmDiv {
-  height: 90%;
-  width: 100%;
-  /* background-color: green; */
-}
-.alarmItem {
-  padding: 22px 10px;
-  height: 23%;
-  background-color: #d9d9d9;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 15px;
-}
-.alarmText {
-  width: 80%;
-  font-size: 18px;
-  margin-left: 10px;
-  /* line-height: 1.2; */
-}
-.arrowDiv {
-  background-color: #ffffff;
-  border-radius: 100%;
-  height: 50px;
-  width: 50px;
+  flex: 1;
+  overflow-y: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  bottom: -10px;
-  left: 50%;
-  transform: translate(-50%, 0);
-}
-.arrowDiv:hover {
-  cursor: pointer;
-  transform: translate(-50%, 0) scale(1.1);
 }
