--- a/src/css/components/myPage/progressingWork.module.css
+++ b/src/css/components/myPage/progressingWork.module.css
@@ -1,61 +1,60 @@
 .container {
   margin-top: 80px;
   width: 100%;
+  background-color: #eef3fc;
+  border-radius: 16px;
 }
 .headerDiv {
-  margin-bottom: 15px;
+  background-color: #bbd8ff;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+  display: flex;
+  align-items: center;
+  height: 60px;
+  padding-left: 10px;
 }
 
-.headerDiv span {
-  font-size: 25px;
+.headerTitle {
+  font-size: 20px;
+  margin-left: 15px;
 }
 
 .body {
-  width: 100%;
-  height: 200px;
-  background-color: #eef3fc;
-}
-.inner {
-  /* width: 100%; */
-  margin-left: 70px;
-  margin-right: 70px;
+  /* height: 400px; */
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
+  padding: 40px 70px;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  gap: 20px;
+}
+.itemContainer {
+  background-color: #ffffff;
+  height: 160px;
+  border-radius: 16px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.itemHeader {
+  display: flex;
+  justify-content: space-between;
+  flex: 1;
   /* background-color: red; */
 }
-.topDiv {
-  /* padding: 10px 70px; */
-  flex: 1;
-  /* padding-top: 5px; */
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.itemTitle {
+  font-size: 25px;
+  font-weight: 500;
+}
+.itemPrice {
+  font-size: 25px;
+  font-weight: 700;
+}
+.itemContent {
+  flex: 2;
   /* background-color: blue; */
 }
-.checkAndTitleDiv {
-  display: flex;
-  flex-direction: row;
-  /* height: 40px; */
-  align-items: center;
-}
-
-.titleDiv span {
-  font-size: 25px;
-  font-weight: 600;
-}
-
-.priceDiv > span {
-  font-size: 25px;
-  font-weight: bold;
-}
-.contentDiv {
-  flex: 2;
-  width: 100%;
-  /* margin-b ottom: 20px; */
-  /* background-color: red; */
-}
-.progressingBarDiv {
-  height: 100px;
-  background-color: #ffffff;
+.itemBtn {
+  flex: 1;
+  /* background-color: green; */
 }
