--- a/src/css/components/stateIcon.module.css
+++ b/src/css/components/stateIcon.module.css
@@ -1,17 +1,16 @@
 .checkDiv {
   display: flex;
   flex-direction: row;
-  /* background-color: #5290ff; */
   border-radius: 100px;
   width: 60px;
   height: 28px;
   align-items: center;
-  padding: 0 7px;
+  padding: 0 8px 0 4px;
   justify-content: space-between;
-  margin-right: 10px;
+  /* margin-right: 10px; */
 }
 .checkDiv span {
-  color: white;
-  font-weight: lighter;
+  color: #ffffff;
+  font-weight: 400;
   font-size: 12px;
 }
