feat: 사이드바 이미지 레이아웃 조정 및 로고 클릭시 마이페이지 메인 화면으로 라우팅

--- a/src/css/components/globalLayout/MenuItem.module.css
+++ b/src/css/components/globalLayout/MenuItem.module.css
@@ -11,6 +11,11 @@
   gap: 8px;
   padding: 8px 12px;
   text-decoration: none;
+  margin-right: 25px;
+}
+
+.titleWidth {
+  width: 100px;
 }
 
 .mainMenu.active {
@@ -29,8 +34,9 @@
   align-items: center;
   cursor: pointer;
   color: #808080;
-  gap: 8px;
+  gap: 14px;
   padding: 4px 0;
+  margin-left: 20px;
 }
 
 .subMenu li.active {
