--- a/src/css/components/globalLayout/SideBarDivider.module.css
+++ b/src/css/components/globalLayout/SideBarDivider.module.css
@@ -1,7 +1,6 @@
-/* 좌측 사이드 바 구분선 구현 */
-.Line {
-  width: 200px;
-  height: 0;
-  flex-shrink: 0;
-  margin-top: 10px;
+.divider {
+  width: 200px; /* 사이드바 너비에 맞춤 */
+  height: 1px; /* 선 두께 */
+  background-color: #d9d9d9; /* 선 색상 */
+  margin: 10px 0; /* 위/아래 여백으로 위치 조정 */
 }
