--- a/src/css/components/myPage/progressBar.module.css
+++ b/src/css/components/myPage/progressBar.module.css
@@ -4,30 +4,61 @@
 }
 
 .progressBar {
-  width: 100%;
-  height: 10px;
+  /* width: 100%; */
+  height: 20px;
   background-color: #e0e0e0;
-  border-radius: 5px;
-  overflow: hidden;
+  border-radius: 20px;
+
+  display: flex;
+  align-items: center;
+  padding: 0 10px;
+  position: relative;
+  z-index: 1;
 }
 
 .progressFill {
-  height: 100%;
+  height: 8px;
   background-color: #3782fa;
-  border-radius: 5px;
-  transition: width 0.5s ease-in-out; /* 부드러운 애니메이션 효과 */
+  border-radius: 20px;
+  transition: width 0.5s ease-in-out;
+  position: relative;
+  z-index: 2;
 }
 
 .dateLabels {
   display: flex;
   justify-content: space-between;
   margin-top: 5px;
-  font-size: 14px;
+  font-size: 12px;
+  font-weight: 400;
   color: #888;
 }
-
-.todayLabel {
-  /* 오늘 날짜 표시 스타일 */
-  font-weight: bold;
-  color: #3782fa;
+.todayMapper {
+  position: absolute;
+  top: 25px;
+  z-index: 3;
+  display: flex;
+  flex-direction: column;
+  width: 70px;
+  justify-content: center;
+  align-items: center;
+  transform: translateX(-50%);
+  transition: left 0.5s ease-in-out;
+}
+.todayDate {
+  width: 100%;
+  height: 30px;
+  font-size: 18px;
+  font-weight: 700;
+  color: #ffffff;
+  background-color: #5290ff;
+  border-radius: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.todayText {
+  color: #5290ff;
+  font-size: 12px;
+  font-weight: 700;
 }
