feat: 폼 구조 추가

--- a/src/css/pages/jobPostPage.module.css
+++ b/src/css/pages/jobPostPage.module.css
@@ -7,6 +7,13 @@
   font-weight: bold;
 }
 
+.formContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .postBtn {
   width: 367px;
   height: 80px;
