--- a/src/css/style.module.css
+++ b/src/css/style.module.css
@@ -51,6 +51,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(20px);
+}
+.startButton.show {
+  opacity: 1;
+  pointer-events: auto;
+  transform: translateY(0);
 }
 
 .startButton:active {
