feat: 필드1컴포넌트 구현

--- a/src/css/components/jobPost/postField.module.css
+++ b/src/css/components/jobPost/postField.module.css
@@ -29,6 +29,17 @@
   color: #000;
 }
 
+.dateSelect {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+  height: 64px;
+  background: #fff;
+  border: none;
+  border-radius: 10px;
+  padding-left: 24px;
+}
+
 .input::placeholder {
   color: #9ca3af;
 }
