--- a/src/css/components/jobPost/postField.module.css
+++ b/src/css/components/jobPost/postField.module.css
@@ -1,8 +1,10 @@
 .postFieldContainer {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 40px;
-  padding: 34px 66px;
+  gap: 25px;
+  padding-top: 34px;
+  padding-bottom: 34px;
   background-color: #f5f6f8;
   border: none;
   border-radius: 10px;
@@ -10,6 +12,8 @@
 
 .fieldContainer {
   display: flex;
+  padding-left: 66px;
+  padding-right: 66px;
   flex-direction: column;
   gap: 14px;
 }
