--- a/src/css/pages/jobPostPage.module.css
+++ b/src/css/pages/jobPostPage.module.css
@@ -8,10 +8,12 @@
 }
 
 .formContainer {
-  width: 100%;
+  /* width: 100%; */
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
+  align-items: center;
+  gap: 40px;
 }
 
 .postBtn {
