--- a/src/css/style.module.css
+++ b/src/css/style.module.css
@@ -22,7 +22,7 @@
 
 .video {
   position: absolute;
-  top: 0;
+  top: -100px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -31,9 +31,10 @@
 }
 
 .content {
-  position: relative;
+  position: absolute;
+  bottom: 200px;
   z-index: 1;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .startButton {
