--- a/src/css/components/myPage/alarmItem.module.css
+++ b/src/css/components/myPage/alarmItem.module.css
@@ -21,6 +21,7 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
+  line-clamp: 2;
   line-height: 1.5;
   max-height: 3em;
   font-size: 20px;
