feat: sidebar active 시 그라데이션 적용

--- a/src/css/components/globalLayout/SideBar.module.css
+++ b/src/css/components/globalLayout/SideBar.module.css
@@ -4,7 +4,7 @@
   width: 240px;
   height: 100vh;
   flex-shrink: 0;
-  background: #f5f6f8;
+  background: #f0f5ff;
   flex-direction: column;
   display: flex;
   align-items: center;
