--- a/src/css/components/globalLayout/MenuItem.module.css
+++ b/src/css/components/globalLayout/MenuItem.module.css
@@ -8,19 +8,22 @@
   align-items: center;
   cursor: pointer;
   color: #808080; /* 비활성 색상 */
-  gap: 8px;
+  gap: 20px;
   padding: 8px 12px;
+  padding: 8px 0;
   text-decoration: none;
-  margin-right: 25px;
-}
-
-.titleWidth {
-  width: 100px;
+  margin-left: 25px;
+  width: 216px;
 }
 
 .mainMenu.active {
   color: #092f63; /* 활성 색상 */
   font-weight: 700;
+  background: linear-gradient(
+    to right,
+    rgb(82, 144, 255, 0) 0%,
+    rgb(82, 144, 255, 0.3) 100%
+  );
 }
 
 .subMenu {
