fix: btnDiv width 띄어쓰기 오류 수정

--- a/src/css/components/myPage/applicationIlKan.module.css
+++ b/src/css/components/myPage/applicationIlKan.module.css
@@ -101,7 +101,7 @@
 }
 .btnDiv {
   background-color: #ffffff;
-  width: 9 0px;
+  width: 90px;
   height: 30px;
   padding: 8px 20px;
   display: flex;
