feat: 사용중인 내 일칸 UI 구현

--- a/src/css/components/myPage/profile.module.css
+++ b/src/css/components/myPage/profile.module.css
@@ -147,7 +147,8 @@
 .emailDiv,
 .addressDiv,
 .resumeDiv,
-.portfolioDiv {
+.portfolioDiv,
+.organizationDiv {
   display: flex;
   align-items: center;
 }
