--- a/src/css/components/jobPost/postField4.module.css
+++ b/src/css/components/jobPost/postField4.module.css
@@ -11,6 +11,9 @@
 }
 
 .fieldTitle {
+  display: flex;
+  align-items: center;
+  gap: 13px;
   font-size: 32px;
   font-weight: bold;
   color: #000;
@@ -31,7 +34,7 @@
   box-sizing: border-box;
   border: none;
   border-radius: 10px;
-  padding: 16px 18px;
+  /* padding: 16px 18px; */
   font-size: 21px;
   resize: none;
   font-family: inherit;
@@ -39,4 +42,9 @@
 
 .textarea::placeholder {
   color: #808080;
+}
+.icon {
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
 }
