--- a/src/css/pages/jobPostPage.module.css
+++ b/src/css/pages/jobPostPage.module.css
@@ -21,6 +21,7 @@
   height: 80px;
   border: none;
   border-radius: 60px;
+  margin-bottom: 74px;
   color: #fff;
   font-size: 32px;
   font-weight: bold;
